# B3DShaderCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  SetingUpDebugger.txt  install.bat
inc/Xsc/: Backend.h  Export.h  Reflection.h  Targets.h  Xsc.h
inc/XscC/: ExportC.h  ReflectionC.h  TargetsC.h  XscC.h
src/Compiler/: BackendLoader.cpp  Compiler.cpp  JoinString.h  OutputShaderVersion.h  Targets.cpp
src/Compiler/AST/: AST.cpp  AST.h  ASTEnums.h  ASTFactory.cpp  ASTFactory.h  Identifier.h
src/Compiler/AST/Visitor/: ExprConverter.cpp  ExprConverter.h  ReferenceAnalyzer.cpp  ReflectionAnalyzer.cpp  ReflectionAnalyzer.h  Visitor.h  VisitorTracker.h
src/Compiler/Backend/: BackendRegistry.cpp  BackendRegistry.h  Converter.cpp  Converter.h  Generator.cpp  Generator.h  XscBackend.cmake  XscRoundtripTests.cmake
src/Compiler/Backend/GLSL/: CMakeLists.txt  GLSLConverter.cpp  GLSLConverter.h  GLSLExtensionAgent.cpp  GLSLExtensionAgent.h  GLSLGenerator.cpp  GLSLGenerator.h  OpaqueStructResolver.cpp  OpaqueStructResolver.h  RegisterBackendGLSL.cpp
src/Compiler/Backend/GLSL/tests/: GLSLTests.cmake  RunGLSLRoundtrip.cmake  RunXscExpectError.cmake
src/Compiler/Backend/HLSL/: CMakeLists.txt  HLSLGenerator.cpp  HLSLGenerator.h  RegisterBackendHLSL.cpp
src/Compiler/Backend/HLSL/tests/: HLSLTests.cmake  RunHLSLRoundtrip.cmake
src/Compiler/Frontend/: PreProcessor.h
src/Compiler/Frontend/GLSL/: GLSLExtensions.cpp
src/Compiler/Frontend/HLSL/: HLSLAnalyzer.cpp  HLSLIntrinsics.cpp  HLSLKeywords.cpp  HLSLKeywords.h  HLSLParser.cpp
src/Compiler/Report/: ReportIdentsEN.h
src/Debugger/: Debugger.h  DebuggerView.cpp  DebuggerView.h  ReportView.h  SourceView.h
src/Shell/: Command.cpp  Command.h  CommandFactory.cpp
src/Wrapper/C/: XscC.cpp
src/Wrapper/CSharp/: XscCSharp.cpp
test/: MatrixMulTest1Strict.hlsl  OpaqueStructNested1.hlsl  OpaqueStructNested2.hlsl  OpaqueStructNested3.hlsl  OpaqueStructNested4.hlsl  OpaqueStructNested5.hlsl  OpaqueStructNested6.hlsl  OpaqueStructRejectCBuffer.hlsl  OpaqueStructRejectCondReassign.hlsl  OpaqueStructRejectEntry.hlsl  OpaqueStructRejectExtDisabled.hlsl  OpaqueStructRejectGlobal.hlsl  OpaqueStructRejectLoopReassign.hlsl  OpaqueStructTest1.hlsl  OpaqueStructTest2.hlsl  OpaqueStructTest3.hlsl  OpaqueStructTest4.hlsl  OpaqueStructTest5.hlsl  OpaqueStructTest6.hlsl  OpaqueStructTest7.hlsl  OpaqueStructTest8.hlsl  OpaqueStructTest9.hlsl  SemanticTest2Strict.hlsl  StrictHlslMulRejectTest.hlsl  StrictHlslPreciseRejectTest.hlsl  TestShader1Strict.hlsl
